--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -259,6 +259,8 @@ select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select
 select-field-type-description=Choose one or more options from a list.
 select-field-type-label=Select from List
 select-form=Select Form
+separator-field-type-description=Add a line to organize your information
+separator-field-type-label=Separator
 show-as-a-switcher=Show as a Switcher
 show-error-message=Show Error Message
 show-more-options=Show More Options
@@ -275,6 +277,7 @@ stay=Stay
 storage-type=Storage Type
 stored-json-attribute=Stored JSON Attribute
 structure-help=Select a structure to create a template for that structure or leave this field blank to create a generic template that can be embedded in other templates.
+style=Style
 submit-form=Submit
 success-page=Success Page
 sum_function=Sum
