LPS-103629 No need for end point in the fields description

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -41,9 +41,9 @@ cancel-field-changes-question=Cancel field changes?
 cancel-without-saving=Cancel without saving?
 changeable-default-language-description=If checked, the default language of dynamic data mapping structures will be changeable. The default language of dynamic data mapping structures is inherited from the site settings.
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script. To use the palette after changing the language, save first.
-checkbox-field-type-description=Answer yes or no questions using a checkbox.
+checkbox-field-type-description=Answer yes or no questions using a checkbox
 checkbox-field-type-label=Boolean Question
-checkbox-multiple-field-type-description=Select multiple options using a checkbox.
+checkbox-multiple-field-type-description=Select multiple options using a checkbox
 checkbox-multiple-field-type-label=Multiple Selection
 choose-a-data-provider=Choose a Data Provider
 choose-a-field-to-show-the-result=Choose a Field to Show the Result
@@ -73,7 +73,7 @@ data-provider-parameter-output=Data Provider's Output:
 data-provider-parameter-output-description=Assign the data provider's parameters you want to a field and the information will autofill it automatically.
 data-provider-timeout-message=Enter the time in milliseconds after which the rest service call will be aborted. Its minimum value is 1000 milliseconds.
 data-providers=Data Providers
-date-field-type-description=Select date from a Datepicker.
+date-field-type-description=Select date from a Datepicker
 date-field-type-label=Date
 ddm-data-provider=Dynamic Data Mapping Data Provider
 ddm-data-provider-configuration-name=Data Providers
@@ -98,7 +98,7 @@ dismiss-operation=Dismiss Operation
 displayed-json-attribute=Displayed JSON Attribute
 displaying-form=Displaying Form
 do=Do
-document-library-field-type-description=Send files via Documents and Media.
+document-library-field-type-description=Send files via Documents and Media
 document-library-field-type-label=Upload
 does-not-contain=Does not contain
 does-not-match=Does not match
@@ -149,7 +149,7 @@ forms=Forms
 from-autofill=From Autofill
 from-data-provider=From Data Provider
 ftl[stands-for]=FreeMarker
-grid-field-type-description=Select options from a matrix.
+grid-field-type-description=Select options from a matrix
 grid-field-type-label=Grid
 help-text=Help Text
 if=If
@@ -204,7 +204,7 @@ no-forms-were-found=No forms were found.
 no-value-is-defined-for-field-x=No value is defined for field {0}.
 no-x-were-found=No {0} were found.
 number-placeholder=Number
-numeric-field-type-description=It accepts only numbers.
+numeric-field-type-description=It accepts only numbers
 numeric-field-type-label=Numeric
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode.
 option=Option
@@ -212,7 +212,7 @@ options-field-type-label=Options
 or=OR
 other-field=Other field
 output-parameters=Output Parameters
-paragraph-field-type-description=Add a title and/or a body text in your form.
+paragraph-field-type-description=Add a title and/or a body text in your form
 paragraph-field-type-label=Paragraph
 parameter=Parameter
 parent-x=Parent {0}
@@ -235,7 +235,7 @@ provide-the-user-name-for-authenticating-to-the-rest-provider=Provide the user n
 publish-form=Publish Form
 publish-the-form-to-get-its-shareable-link=Publish the form to get its shareable link.
 publish-this-form=Publish this form.
-radio-field-type-description=Select only one item with a radio button.
+radio-field-type-description=Select only one item with a radio button
 radio-field-type-label=Single Selection
 regular-expression=Regular expression
 remove-field=Remove Field
@@ -256,7 +256,7 @@ saved-x=Saved &#149; {0}
 saving=Saving
 script-file=Script File
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application.
-select-field-type-description=Choose one or more options from a list.
+select-field-type-description=Choose one or more options from a list
 select-field-type-label=Select from List
 select-form=Select Form
 separator-field-type-description=Add a line to organize your information
@@ -289,7 +289,7 @@ switch-pagination-to-bottom=Switch Pagination to Bottom
 switch-pagination-to-top=Switch Pagination to Top
 template-key-help=The template key can be used to include this template programatically in another template.
 templates-for-structure-x=Templates for Structure: {0}
-text-field-type-description=Single line or multiline text area.
+text-field-type-description=Single line or multiline text area
 text-field-type-label=Text Field
 the-autosave-interval-must-be-greater-than-or-equal-to-0=The autosave interval must be greater than or equal to 0.
 the-data-provider-cannot-be-deleted-because-it-is-required-by-one-or-more-forms=The data provider cannot be deleted because it is required by one or more forms.
